--- a/src/views/shopper/home/Home.css
+++ b/src/views/shopper/home/Home.css
@@ -1,15 +1,15 @@
-.home-container {
+.homeContainer {
   position: relative;
+  font-family: 'Poppins';
 }
 
-.home-container:before {
+.homeContainer:before {
   content: '';
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  
   opacity: 0.5;
   z-index: -1;
 }
